correction des bugs au niveau de la documentation de l'API
