# app/Http/Controllers/Annotations/DemandedaccompagnementAnnotationController.php
@@ -26,7 +26,7 @@ namespace App\Http\Controllers\Annotations ;
  *
 
  * @OA\POST(
- *     path="/api/accompagnement/3",
+ *     path="/api/accompagnement/{id}",
  *     summary="Demande d'accompagnement personnalisée",
  *     description="",
  *         security={
@@ -36,19 +36,10 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="400", description="Bad Request"),
  * @OA\Response(response="401", description="Unauthorized"),
  * @OA\Response(response="403", description="Forbidden"),
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
+ * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
- *     @OA\RequestBody(
- *         required=true,
- *         @OA\MediaType(
- *             mediaType="multipart/form-data",
- *             @OA\Schema(
- *                 type="object",
- *                 properties={
- *                 },
- *             ),
- *         ),
- *     ),
  *     tags={"Demande d'accompagnement"},
 *),
 
